# datasette-uptime

./: README.md  pyproject.toml
datasette_uptime/: __init__.py
tests/: test_uptime.py
